# astute

./: CHANGES  INSTALL  README  astute_start.csh.in  astute_start.sh.in  configure  configure.ac  py-devel.csh
admit/: HISTORY  Makefile  README  setup.py
admit/analysis_scripts/: README  README.pjt  analysisUtils.py  au_noASDMLibrary.py  calDatabaseQuery.py  compUtils.py  history.pjt  plotbandpass3.py  readscans.py  tmUtils.py
data/: README  cube432.fits  grabdata  new_spec.xml  ros13co.clf.fits
doc/: code0.py  code1.py  code2.py  code3.py
etc/: README.files  n253.dir  n253.tas.def  n253_lines.list
examples/: admit0.py  admit1.py  admit2.py  admit_2.py  azip.py  bdp.py  bdp2.py  bdp3.py  bdp4.py  bdp5.py  bdp6.py  bdp7.py  cube432.py  do_bench  do_bench.py  flow1.py  flow1N-at.py  flow2-at.py  flow2.py  flow2b.py  flow3.py  flow4-at.py  flow4.py  flowN-at.py  flowN.py  graph-path.py  mk_galaxy_expanding_shells  mk_shape  momentofinertia.py  n253.csh  n253.py  n253_bootstrap.csh  n253_line_id.csh  n253_overlap.csh  n253_pipeline.csh  plot2.py  plot3.py  plot_stats.py  segdes.py  stats.csh  (+4 more)
gui/: FirstApp.py  FirstApp.ui  README  callFirstApp.py
lib/: AT_cubespectrum.py  AT_cubestats.py  AT_cubesum.py  AT_ingest.py  AT_linecube.py  AT_linelist.py  AT_moments.py  AT_pvmap.py  AT_summary.py  FlowManager.py  VOTable.py  adm.py  admit0.py  admit1.py  admit2.py  alines.py  aplot.py  astute.py  atable.py  clumpfind.py  image_class.py  imbench.py  master_gui.py  myfits.py  parfile.py  plot.py  runidl.py  runsh.py  spectrum_class.py
opt/: README
rawdata/: README
(+88 files in other folders)
