dnl Process this file with autoconf to produce a new configure script
dnl if it has changed. 
dnl ---------------------------------------------------------------------------------

AC_MSG_CHECKING([ASTUTE config])

AC_INIT(README)

ASTUTE="`pwd`"
AC_SUBST(ASTUTE)

AC_OUTPUT(astute_start.csh)
AC_OUTPUT(astute_start.sh)

dnl A dummy matplotlibbackend.py, should be using --with-backend=Agg or so
dnl touch lib/matplotlibbackend.py


